# VIBES

./: .gitignore  .travis.yml  README.md  index.html  params.json
.github/workflows/: dockermatrix.yml  unixmatrix.yml
client-api/: README.md
client-api/C++/: Doxyfile
client-api/C++/examples/: CMakeLists.txt  all_commands.cpp  pong.cpp  pong.h  sivia_simple.cpp
client-api/C++/examples/interval/: box.cpp  box.h  iboolean.cpp  iboolean.h  interval.cpp  interval.h
client-api/C++/src/: vibes.cpp  vibes.h
client-api/MATLAB/examples/: README.md  drawing_3D.m
client-api/MATLAB/src/+vibes/: axisAuto.m  axisLabel.m  axisLabels.m  beginDrawing.m  drawBox.m  drawLine.m  endDrawing.m  newFigure.m
client-api/MATLAB/src/+vibes/+json/: README.md  dump.m  load.m  read.m  write.m
client-api/Octave/: .gitattributes  .gitignore  COPYING  DESCRIPTION  INDEX  Makefile  NEWS
client-api/Octave/inst/+vibes/: axisAuto.m  axisLabels.m  beginDrawing.m  drawBox.m  drawBoxes.m  drawLine.m  endDrawing.m  newFigure.m
client-api/Octave/src/: Makefile  __vibes__.cpp
client-api/python/: MANIFEST.in  README.md  example.py  setup.py  vibes.py
client-api/python/docs/: Makefile  api.rst  conf.py  make.bat  quickstart.md
client-api/python/vibes/: __init__.py  example.py  example_allfigures.py  vibes.py
client-api/python/vibes.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
doxygen/cxx/: annotated.html  classes.html  classvibes_1_1_params-members.html  classvibes_1_1_params.html  classvibes_1_1_params_1_1_name_helper-members.html  classvibes_1_1_params_1_1_name_helper.html  classvibes_1_1_value-members.html  classvibes_1_1_value.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  files.html  globals.html  globals_defs.html  group__connection.html  group__drawing.html  group__figure.html  group__params.html  index.html  modules.html  namespacemembers.html  namespacemembers_func.html  namespacemembers_type.html  namespacemembers_vars.html  namespaces.html  namespacevibes.html  structvibes_1_1_vec-members.html  structvibes_1_1_vec.html  vibes_8cpp_source.html  vibes_8h.html  vibes_8h_source.html
doxygen/cxx/search/: all_0.js  all_2.js  all_3.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  classes_0.js  classes_2.js  defines_0.js  files_0.js  functions_1.js  functions_2.js  functions_3.js  functions_4.js  functions_5.js  functions_6.js  functions_7.js  groups_0.js  groups_2.js  groups_3.js  namespaces_0.js  search.js  typedefs_0.js  typedefs_1.js  variables_0.js
sphinx/doctrees/: api.doctree  environment.pickle  index.doctree  quickstart.doctree
sphinx/html/: .buildinfo  api.html  genindex.html  index.html  objects.inv  quickstart.html  search.html  searchindex.js
sphinx/html/_sources/: index.txt
stylesheets/: styles.css
viewer/: CMakeLists.txt  MacroAddAppIcon.cmake  README.md  VIBes-viewer.pro  figure2d.cpp  figure2d.h  main.cpp  propertyeditdialog.cpp  propertyeditdialog.h  propertyeditdialog.ui  treeview.cpp  treeview.h  vibesgraphicsitem.cpp  vibesgraphicsitem.h  vibesscene2d.cpp  vibesscene2d.h  vibestreemodel.cpp  vibestreemodel.h  vibeswindow.cpp  vibeswindow.h  vibeswindow.ui  viewer.pro
viewer/AppDir/usr/share/applications/: VIBes-viewer.desktop
viewer/VIBes_DMG_bg/: DS_Store
viewer/icons/: vibes.rc
viewer/tests/: all_commands.json
